--- a/_config.yml
+++ b/_config.yml
@@ -159,3 +159,8 @@ fonts:
     - https://fonts.gstatic.com
   font_urls:
     - https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap
+
+
+
+# add by jun 
+theme: alembic-jekyll-theme
